# simUMI

./: .gitignore  .travis.yml  LICENSE  README.md  UMI_simulation_notebook.ipynb  requirements.txt  setup.cfg
UMIsimulator/: simulator.py  test_simulator.py
UMIsimulator/ampcycle/: __init__.py  sim.py
UMIsimulator/dedup/: __init__.py
UMIsimulator_ludvigla.egg-info/: PKG-INFO  SOURCES.txt
docs/source/: conf.py  index.rst
simUMI_ludvigla.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
