[metadata]
# replace with your username:
name = UMIsimulator-ludvigla
version = 0.0.1
author = Ludvig Larsson
author_email = ludvig.larsson@scilifelab.se
description = UMI simulation framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ludvigla/simUMI
project_urls =
    Bug Tracker = https://github.com/ludvigla/simUMI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
